--- a/style/main.css
+++ b/style/main.css
@@ -2,123 +2,82 @@
   font-family: "Lato", sans-serif;
 }
 
-.wrapper {
-  max-width: 1170px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.back-to-top {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  right: 8rem;
-  bottom: 8rem;
-  width: 70px;
-  height: 70px;
-  background: #b71540;
-  border-radius: 50%;
-  visibility: hidden;
-  transition: 0.5s;
-  opacity: 0;
-}
-.back-to-top:hover,
-.back-to-top:focus {
-  filter: brightness(1.5);
-  outline: none;
-}
-.back-to-top img {
-  transform: rotate(-90deg);
-  width: 40px;
-  margin-bottom: 6px;
-}
-
-.active {
-  visibility: visible;
-  opacity: 1;
-}
-
 header {
   width: 100%;
-  margin-bottom: 10%;
+}
+
+.wrapper {
+  padding-top: 14vh;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 
 .header__nav {
   position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  border-bottom: 2px solid #000;
   width: 100%;
   left: 0;
   top: 0;
-  padding: 20px 100px;
+  padding: 1.25rem 6.25rem;
   z-index: 10;
-  display: flex;
-  justify-content: space-between;
-  font-size: 24px;
-  color: #333;
-  background: #fff;
 }
 
-.nav__logo:hover {
-  transform: translateY(-4px);
+.link {
+  cursor: pointer;
+  background: transparent;
+  transition: 0.05s;
+  font-size: 1.5rem;
+  color: #000;
+  background: transparent;
+  border: 2px solid #000;
+  padding: 0.5rem 1rem;
 }
-
-.nav__logo-link {
-  color: #333;
+.link:hover {
+  transform: translate(4px, 4px);
+  box-shadow: -4px -4px #000;
 }
 
 .nav__list {
   display: flex;
-  justify-content: space-between;
-}
-
-.list__item {
-  margin-left: 40px;
-}
-
-.list__item:hover {
-  transform: translateY(-4px);
-}
-
-.link {
-  color: #333;
-}
-
-.link:hover {
-  color: #b71540;
+  gap: 1rem;
 }
 
 .hamburger__menu {
   display: none;
 }
 
-.header__title {
-  padding-top: 20%;
+.center {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 31.25rem;
 }
 
-.center {
+.header__title {
   display: flex;
-  flex-direction: column;
-  text-align: center;
   gap: 20px;
-  margin: 0 auto;
-  max-width: 500px;
+  flex-direction: column;
+  color: #000;
 }
 
 .title {
-  color: #333;
-  font-size: 48px;
+  color: #000;
+  font-size: 3rem;
 }
 
 .descr {
-  font-size: 24px;
-  color: #777777;
+  font-size: 1.5rem;
+  color: #000;
 }
 
 .subtitle {
-  font-size: 36px;
-  color: #333;
-  margin-bottom: 20px;
+  font-size: 2.25rem;
+  color: #000;
+  margin-bottom: 1.25rem;
 }
 
 #about:before {
@@ -136,15 +95,11 @@ img {
 
 .flex {
   display: flex;
-  gap: 10%;
+  justify-content: space-evenly;
 }
 
 .text-info {
   max-width: 500px;
-}
-
-.about__title p.descr {
-  margin-bottom: 100px;
 }
 
 .text-info__flex {
@@ -157,7 +112,7 @@ img {
 }
 
 .text-info.text-info__flex p.descr {
-  margin-bottom: 100px;
+  text-align: center;
 }
 
 .subtitle-info__flex {
@@ -176,7 +131,6 @@ img {
   display: flex;
   justify-content: space-between;
   gap: 50px;
-  margin-bottom: 20px;
 }
 
 .front,
@@ -242,9 +196,6 @@ img {
 .portfolio {
   margin-bottom: 50px;
 }
-.portfolio .portfolio__title.center p.descr {
-  margin-bottom: 50px;
-}
 .portfolio .portfolio__gallery {
   display: flex;
   justify-content: center;
@@ -299,9 +250,7 @@ img {
   padding: 26px;
   min-width: 600px;
 }
-.form-name::-moz-placeholder,
-.form-email::-moz-placeholder,
-.form-message::-moz-placeholder {
+.form-name::-moz-placeholder, .form-email::-moz-placeholder, .form-message::-moz-placeholder {
   font-size: 24px;
   color: #777;
 }
@@ -311,9 +260,7 @@ img {
   font-size: 24px;
   color: #777;
 }
-.form-name:hover::-moz-placeholder,
-.form-email:hover::-moz-placeholder,
-.form-message:hover::-moz-placeholder {
+.form-name:hover::-moz-placeholder, .form-email:hover::-moz-placeholder, .form-message:hover::-moz-placeholder {
   color: #b71540;
 }
 .form-name:hover::placeholder,
@@ -365,4 +312,4 @@ img {
 .flex-box .social-links .links {
   display: flex;
   justify-content: space-between;
-} /*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
