--- a/style/mobile.css
+++ b/style/mobile.css
@@ -4,6 +4,9 @@
     margin: 0 auto;
     padding: 20px;
   }
+  .header__title {
+    padding-top: 18vh;
+  }
   img {
     margin-bottom: 80px;
   }
@@ -42,7 +45,7 @@
     position: absolute;
     width: 100%;
     height: 3px;
-    background: #333;
+    background: #000;
     transition: 0.3s;
   }
   .menu__btn > span::before {
@@ -113,6 +116,10 @@
   }
   .header__nav {
     padding: 20px 50px;
+    align-items: center;
+  }
+  .header__title {
+    padding-top: 15vh;
   }
   .menu__btn {
     top: 20px;
