Delete paddings & margins

--- a/style/main.css
+++ b/style/main.css
@@ -4,13 +4,7 @@
 
 header {
   width: 100%;
-}
-
-.wrapper {
-  padding-top: 14vh;
-  text-align: center;
-  margin: 0 auto;
-  max-width: 1440px;
+  padding-top: 3.125rem;
 }
 
 .header__nav {
@@ -59,8 +53,9 @@ header {
 
 .header__title {
   display: flex;
-  gap: 20px;
   flex-direction: column;
+  padding: 1rem 1.5rem;
+  gap: 1.25rem;
   color: #000;
 }
 
@@ -193,9 +188,6 @@ img {
   margin: -55px 0 0;
 }
 
-.portfolio {
-  margin-bottom: 50px;
-}
 .portfolio .portfolio__gallery {
   display: flex;
   justify-content: center;
@@ -237,7 +229,8 @@ img {
 }
 
 .contact {
-  margin-bottom: 50px;
+  margin: 0;
+  padding: 0;
 }
 
 .form-name,
