Made 100vh for each section

--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,14 @@
 
 header {
   width: 100%;
-  padding-top: 3.125rem;
+}
+
+#wrapper {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header__nav {
@@ -52,7 +59,9 @@ header {
 }
 
 .header__title {
+  height: 100vh;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   padding: 1rem 1.5rem;
   gap: 1.25rem;
@@ -73,6 +82,14 @@ header {
   font-size: 2.25rem;
   color: #000;
   margin-bottom: 1.25rem;
+}
+
+#about {
+  height: 100vh;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 img {
