--- a/style/main.scss
+++ b/style/main.scss
@@ -3,9 +3,14 @@
 }
 header {
     width: 100%;
-    padding-top: 3.125rem;
 }
-
+#wrapper {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
 .header__nav {
     position: fixed;
     display: flex;
@@ -48,7 +53,9 @@ header {
 }
 
 .header__title {
+    height: 100vh;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     padding: 1rem 1.5rem;
     gap: 1.25rem;
@@ -68,7 +75,13 @@ header {
     margin-bottom: 1.25rem;
 }
 // About ----
-
+#about {
+    height: 100vh;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 img {
     max-width: 350px;
     width: 100%;
