--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,16 @@
-* {
-    font-family: "Lato", sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+
+body {
+  font-family: 'Bebas Neue', sans-serif;
+  letter-spacing: 1px;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+    html {
+        scroll-behavior: smooth;
+    }
+}
+
 header {
     width: 100%;
 }
@@ -47,7 +57,6 @@ header {
 }
 // Title & descr align center ----
 .center {
-    text-align: center;
     margin: 0 auto;
     max-width: 31.25rem;
 }
@@ -57,6 +66,7 @@ header {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
     padding: 1rem 1.5rem;
     gap: 1.25rem;
     color: #000;
@@ -66,11 +76,11 @@ header {
     font-size: 3rem;
 }
 .descr {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: #000;
 }
 .subtitle {
-    font-size: 2.25rem;
+    font-size: 2rem;
     color: #000;
     margin-bottom: 1.25rem;
 }
@@ -81,6 +91,15 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+}
+.about {
+    .title {
+        margin-bottom: 1.5rem;
+    }
+    .descr {
+        margin-bottom: 1.5rem;
+    }
 }
 img {
     max-width: 350px;
@@ -88,23 +107,28 @@ img {
     height: 100%;
 }
 .flex {
+    text-align: left;
     display: flex;
     justify-content: space-evenly;
+    gap: 8vw;
 }
-.text-info {
+.about-text {
     max-width: 500px;
-}
-.text-info__flex {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    & > * {
+        flex: 1 1 17em;
+    }
+    .subtitle {
+        line-height: 1.1;
+        text-align: center;
+    }
 }
-.text-info__flex > * {
-    flex: 1 1 17em;
-}
-.text-info.text-info__flex p.descr {
+.about-flex p.descr {
     text-align: center;
 }
-.subtitle-info__flex {
+.subtitle-flex {
     flex-direction: column;
     text-align: center;
 }
@@ -164,9 +188,6 @@ img {
 // portfolio
 
 .portfolio {
-    .portfolio__title.center p.descr {
-    }
-
     .portfolio__gallery {
         display: flex;
         justify-content: center;
