--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,7 @@ header {
 }
 
 #wrapper {
+  width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -60,6 +61,7 @@ header {
 }
 
 .center {
+  text-align: center;
   margin: 0 auto;
   max-width: 31.25rem;
 }
@@ -69,7 +71,6 @@ header {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  text-align: center;
   padding: 1rem 1.5rem;
   gap: 1.25rem;
   color: #000;
@@ -143,35 +144,48 @@ img {
   text-align: center;
 }
 
+.skills {
+  padding: 0 5vw;
+}
+.skills .title {
+  margin-bottom: 1.5rem;
+}
+.skills .descr {
+  margin-bottom: 1.5rem;
+}
+
 .skills-flex {
   display: flex;
-  justify-content: space-between;
-  gap: 50px;
+  justify-content: center;
+  gap: 8vw;
+  width: 100%;
 }
 
 .front,
 .designer {
   display: flex;
   flex-direction: column;
-  max-width: 500px;
-  gap: 50px;
+  max-width: 550px;
   width: 100%;
 }
 
 .pr-bar__html,
 .pr-bar__css,
+.pr-bar__react,
 .pr-bar__figma,
 .pr-bar__photoshop {
   width: 100%;
 }
 .pr-bar__html .descr,
 .pr-bar__css .descr,
+.pr-bar__react .descr,
 .pr-bar__figma .descr,
 .pr-bar__photoshop .descr {
   float: right;
 }
 .pr-bar__html .progressbar,
 .pr-bar__css .progressbar,
+.pr-bar__react .progressbar,
 .pr-bar__figma .progressbar,
 .pr-bar__photoshop .progressbar {
   height: 10px;
@@ -180,6 +194,7 @@ img {
 }
 .pr-bar__html .progressbar > span,
 .pr-bar__css .progressbar > span,
+.pr-bar__react .progressbar > span,
 .pr-bar__figma .progressbar > span,
 .pr-bar__photoshop .progressbar > span {
   display: block;
@@ -188,6 +203,10 @@ img {
   background-color: #b71540;
   position: relative;
   overflow: hidden;
+}
+
+.pr-bar__react .progressbar > span {
+  width: 50%;
 }
 
 .pr-bar__css .progressbar > span {
@@ -202,34 +221,61 @@ img {
   width: 60%;
 }
 
-.portfolio .portfolio__gallery {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
+.portfolio .title,
+.portfolio .descr {
+  margin-bottom: 1.5rem;
 }
-.portfolio .first,
-.portfolio .second {
-  width: 300px;
-  height: 300px;
-  background-repeat: no-repeat;
+.portfolio .portfolio__gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 1rem;
+}
+.portfolio .project {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 350px;
+  height: 200px;
+  background: #777;
 }
-.portfolio .first {
-  background: url(../img/Logoipsum.jpg);
+.portfolio .project__britlex {
+  background: url("https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=876&q=80");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.portfolio .first img {
-  max-width: 128px;
-  max-height: 34px;
-  margin: 0;
+.portfolio .project__perfume {
+  background: url("https://images.unsplash.com/photo-1590736704728-f4730bb30770?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=474&q=80");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.portfolio .second {
-  background: url(../img/kea.jpg);
+.portfolio .project__dragndrop {
+  background: url("https://images.unsplash.com/photo-1494797262163-102fae527c62?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDh8fGhvbGQlMjBvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.portfolio .second p {
-  font-size: 36px;
-  color: #fff;
+.portfolio .project__kea {
+  background: url("https://images.unsplash.com/photo-1552404200-b22566b2317b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fG1pbGt8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.portfolio .project a {
+  cursor: pointer;
+  background: transparent;
+  transition: 0.05s;
+  font-size: 3rem;
+  color: #000;
+  background: #fff;
+  border: 2px solid #000;
+  padding: 0.5rem 1rem;
+}
+.portfolio .project a:hover {
+  transform: translate(4px, 4px);
+  box-shadow: -4px -4px #000;
 }
 
 .contact {
