--- a/style/main.scss
+++ b/style/main.scss
@@ -168,13 +168,14 @@ img {
     .progressbar {
         height: 10px;
         position: relative;
-        background: #f6c6d3;
+        background: #fff;
+        border: 1px solid #000;
     }
     .progressbar > span {
         display: block;
         height: 100%;
         width: 80%;
-        background-color: #b71540;
+        background-color: #000;
         position: relative;
         overflow: hidden;
     }
@@ -261,47 +262,57 @@ img {
     }
 }
 // contact me
-
-.contact {
-    margin: 0;
-    padding: 0;
+.title,
+.descr {
+    margin-bottom: 1.5rem;
 }
-.form-name,
-.form-email,
-.form-message {
-    background: #f6c6d3;
-    font-size: 24px;
-    border-radius: 30px;
-    margin: 10px;
-    padding: 26px;
-    min-width: 600px;
-    &::placeholder {
-        font-size: 24px;
-        color: #777;
-    }
-    &:hover::placeholder {
-        color: #b71540;
-    }
-}
-.form {
+.contact-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
+    max-width: 700px;
+    width: 100%;
+    gap: 20px;
+    .contact-text {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+    }
+    .send {
+        cursor: pointer;
+        background: transparent;
+        transition: 0.05s;
+        font-size: 1.5rem;
+        color: #000;
+        background: transparent;
+        border: 2px solid #000;
+        padding: 0.5rem 1rem;
+        &:hover {
+            transform: translate(4px, 4px);
+            box-shadow: -4px -4px #000;
+        }
+    }
+    label {
+        padding: 0 1rem;
+        display: flex;
+        font-size: 2rem;
+        background: #000;
+        color: #fff;
+        height: 100%;
+        min-width: 260px;
+        align-items: center;
+    }
+    input {
+        font-size: 1.5rem;
+        padding: 0.5rem 1rem;
+        background: #fff;
+        color: #000;
+        width: 100%;
+        border: 2px solid #000;
+    }
 }
-.button {
-    width: 600px;
-    display: block;
-    background: #b71540;
-    font-size: 24px;
-    border-radius: 30px;
-    margin: 10px;
-    padding: 26px;
-    text-align: center;
-    color: #fff;
-}
-.button:hover {
-    opacity: 90%;
-}
+
 // footer ----
 .footer {
     background: #b71540;
