--- a/style/main.scss
+++ b/style/main.scss
@@ -315,23 +315,41 @@ img {
 
 // footer ----
 .footer {
-    background: #b71540;
-    p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    background: #000;
+    height: 30vh;
+    max-width: 100%;
+    padding: 0 8vw;
+    .title,
+    .descr {
+        margin-bottom: 1.5rem;
         color: #fff;
     }
 }
-.flex-box {
+.social-links {
+    text-align: center;
     display: flex;
-    justify-content: space-between;
-    img {
-        width: 40px;
-        height: 40px;
-    }
-    .social-links {
-        text-align: center;
-        .links {
-            display: flex;
-            justify-content: space-between;
+    flex-direction: column;
+    .links {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+        a {
+            cursor: pointer;
+            background: transparent;
+            transition: 0.05s;
+            font-size: 1.5rem;
+            color: #fff;
+            background: transparent;
+            border: 2px solid #fff;
+            padding: 0.5rem 1rem;
+            &:hover {
+                transform: translate(4px, 4px);
+                box-shadow: -4px -4px #fff;
+            }
         }
     }
 }
