--- a/style/main.css
+++ b/style/main.css
@@ -231,12 +231,14 @@ img {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   gap: 1rem;
+  width: 100%;
+  padding: 0 6vw;
 }
 .portfolio .project {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 350px;
+  width: 100%;
   height: 200px;
   background: #777;
 }
