--- a/style/main.css
+++ b/style/main.css
@@ -340,7 +340,7 @@ img {
   bottom: 0;
   background: #000;
   height: 30vh;
-  max-width: 100%;
+  max-width: 100vw;
   padding: 0 8vw;
 }
 .footer .title,
