--- a/style/main.scss
+++ b/style/main.scss
@@ -323,7 +323,7 @@ img {
     bottom: 0;
     background: #000;
     height: 30vh;
-    max-width: 100%;
+    max-width: 100vw;
     padding: 0 8vw;
     .title,
     .descr {
