--- a/style/main.scss
+++ b/style/main.scss
@@ -4,7 +4,10 @@ body {
     font-family: "Bebas Neue", sans-serif;
     letter-spacing: 1px;
 }
-
+main {
+    width: min(300ch, 100% - 4rem);
+    margin-inline: auto;
+}
 @media (prefers-reduced-motion: no-preference) {
     html {
         scroll-behavior: smooth;
@@ -13,6 +16,9 @@ body {
 
 header {
     width: 100%;
+}
+.none{
+    display: none;
 }
 #wrapper {
     width: 100%;
@@ -32,7 +38,8 @@ header {
     width: 100%;
     left: 0;
     top: 0;
-    padding: 1.25rem 6.25rem;
+    height: 5rem;
+    padding: 0 4rem;
     z-index: 10;
 }
 .link {
@@ -64,11 +71,11 @@ header {
 }
 
 .header__title {
+    padding-top: 5rem;
     height: 100vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 1rem 1.5rem;
     gap: 1.25rem;
     color: #000;
 }
@@ -87,12 +94,12 @@ header {
 }
 // About ----
 #about {
-    height: 100vh;
-    justify-content: center;
+    padding-top: 5rem;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
+    height: 100vh;
 }
 .about {
     .title {
@@ -110,8 +117,8 @@ img {
 .flex {
     text-align: left;
     display: flex;
+    gap: 1rem;
     justify-content: space-evenly;
-    gap: 8vw;
 }
 .about-text {
     max-width: 500px;
@@ -135,7 +142,12 @@ img {
 }
 // Skills
 .skills {
-    padding: 0 5vw;
+    height: 100vh;
+    padding-top: 5rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .title {
         margin-bottom: 1.5rem;
     }
@@ -145,8 +157,8 @@ img {
 }
 .skills-flex {
     display: flex;
-    justify-content: center;
-    gap: 8vw;
+    justify-content: space-evenly;
+    gap: 1rem;
     width: 100%;
 }
 .front,
@@ -187,7 +199,7 @@ img {
 }
 .pr-bar__css {
     .progressbar > span {
-        width: 70%;
+        width: 85%;
     }
 }
 .pr-bar__figma {
@@ -203,6 +215,11 @@ img {
 // portfolio
 
 .portfolio {
+    padding-top: 5rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .title,
     .descr {
         margin-bottom: 1.5rem;
@@ -214,7 +231,6 @@ img {
         grid-template-rows: auto;
         gap: 1rem;
         width: 100%;
-        padding:0 6vw;
     }
     .project {
         display: flex;
@@ -264,6 +280,15 @@ img {
     }
 }
 // contact me
+#contact {
+    padding-top: 5rem;
+
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .title,
 .descr {
     margin-bottom: 1.5rem;
@@ -272,7 +297,7 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 700px;
+    max-width: 1000px;
     width: 100%;
     gap: 20px;
     .contact-text {
@@ -301,11 +326,12 @@ img {
         font-size: 2rem;
         background: #000;
         color: #fff;
-        height: 100%;
         min-width: 260px;
+        height: 45px;
         align-items: center;
     }
     input {
+        height: 45px;
         font-size: 1.5rem;
         padding: 0.5rem 1rem;
         background: #fff;
