--- a/style/mobile.css
+++ b/style/mobile.css
@@ -18,27 +18,33 @@
     padding: 0.5rem 1rem;
   }
   .navigation-mobile {
-    display: block;
-    border-right: 2px solid #000;
-    z-index: 10;
     position: absolute;
-    width: 50vw;
-    height: 400px;
-    height: 100vh;
-    background: #fff;
+    display: block;
     top: 0;
     left: -100%;
+    z-index: 10;
+    width: 45vw;
+    height: 400px;
+    height: 100vh;
+    transition: 0.3s;
+    border-right: 2px solid #000;
+    background: #fff;
   }
   .navigation-mobile__links {
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 5vh;
     align-items: center;
+    height: 100%;
     padding: 1rem;
   }
   .navigation-mobile__links .link {
     width: 100%;
+  }
+  .active {
+    display: block;
+    left: 0%;
   }
   .header__title {
     height: 100vh;
